@startuml
class Handler {
    +save: {}
    +callback: (save: {}, result: {}) => void
    +fire(result: {}): void
}

interface HaveEvent {
    +events: string[]
    +on(event: string, callback: (save: {}, result: {}): HaveEvent
    +emit(event: string, data?: {}): HaveEvent
}
class Identity {
    +id: string
    +profile: Record<string, any>
}
class User implements HaveMember {
}
class Member implements HaveEvent {
    +events: string[]
    +user: User
    +group: Group
    +profile: Record<string, any>
    +destroy(): void
    +{static} build(user: User, group: Group, profile?: Record<string, : ny>): Member
}
interface HaveMember {
    +size: number
    +add(member: Member): void
    +delete(member: Member): void
    +destroy(): void
    +has(member: Member): boolean
    +get(id: string): Member
}
class Group implements HaveMember {
    +owner: User
}
class Index {
    +users: Map<string, User>
    +groups: Map<string, Group>
    -items: Map<string, Identity>
    -properties: string[]
    -itemsBy: Map<string, Map<any, Identity>>
    +add(identity: Identity): Index
    +delete(identity: Identity): Index
    +get(id: string): Identity
    +getBy(property: string, value: any): Identity
}

User *-- "1" Identity
Group *-- "1" Identity
HaveMember *-- "many" Member
HaveMember ..|> HaveEvent
Member o-- Group
Member o-- User
Index *-- "many" User
Index *-- "many" Group
HaveEvent *-- "many" Handler
@enduml
